Use "/" in commands and preferences rather than ">"

--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
+
 <head>
 <meta http-equiv="Content-Language" content="en-us">
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
@@ -26,109 +27,122 @@ through M5 &quot;New and Noteworthy&quot; bulletins.]</p>
 <p>[Formatting changes: add horizontal line between each item; change font and
 size throughout.]</p>
 <table border="0" cellpadding="10" cellspacing="0" width="500">
-  <tr> 
-    <td colspan="2" valign="top"> 
+  <tr>
+    <td colspan="2" valign="top">
       <hr>
     </td>
   </tr>
-  <tr> 
+  <tr>
     <td width="30%" valign="top" align="right"><b>Reminders in your code</b></td>
-    <td width="70%" valign="top" align="left">The Java compiler will now create 
-      visible tasks whenever it finds a comment in a Java source file tagged as 
-      &quot;TODO&quot;. Use the <b>Java / Task Tags </b>preference page to configure 
-      other task tags. 
+    <td width="70%" valign="top" align="left">The Java compiler will now create
+      visible tasks whenever it finds a comment in a Java source file tagged as
+      &quot;TODO&quot;. Use the <b>Java &gt; Task Tags </b>preference page to
+      configure other task tags.
       <p align="center"><img border="0" src="images/task-tags.gif" width="413" height="191"></p>
     </td>
   </tr>
-  <tr> 
+  <tr>
     <td width="30%" valign="top" align="right"><b>Quick Assists</b></td>
-    <td width="70%" valign="top" align="left">[TBD] 
+    <td width="70%" valign="top" align="left">[TBD]
   </tr>
-  <tr> 
+  <tr>
     <td width="30%" valign="top" align="right"><b>Quick fixes</b></td>
-    <td width="70%" valign="top" align="left">Position the cursor in an identifier 
-      and press Ctrl+1 (<b>Edit &gt; Quick Fix</b>) in the Java editor to invoke 
-      the quick fix mechanism even when there are no errors. 
+    <td width="70%" valign="top" align="left">Position the cursor in an
+      identifier and press Ctrl+1 (<b>Edit &gt; Quick Fix</b>) in the Java
+      editor to invoke the quick fix mechanism even when there are no errors.
       <ul>
         <li>Linked rename: Available on all identifiers.</li>
         <p align="left"><img src="images/linked-rename.gif" border="1" width="466" height="239"><br>
-          <br>
-          Switches into the editor linked mode editing (like templates), where 
-          changing the identifier changes all occurrences of that name within 
-          the source file. 
-        <li>Move catch block to throws declaration: Available on the catch statement.</li>
-        <li>Assign expression statements to a local variable or field: Available 
+        <br>
+        Switches into the editor linked mode editing (like templates), where
+        changing the identifier changes all occurrences of that name within the
+        source file.
+        <li>Move catch block to throws declaration: Available on the catch
+          statement.</li>
+        <li>Assign expression statements to a local variable or field: Available
           on all expression statements. e.g.:&nbsp;</li>
         <tt>&nbsp;&nbsp; vector.iterator();</tt><br>
         will be transformed to<br>
         <tt>&nbsp;&nbsp; Iterator iterator= vector.iterator();</tt><br>
-        Quick assist will guess a variable name for you. 
+        Quick assist will guess a variable name for you.
       </ul>
     </td>
   </tr>
-  <tr> 
-    <td width="30%" valign="top" align="right"> 
-      <div align="right"> <b>Improved conditional breakpoints</b> </div>
+  <tr>
+    <td width="30%" valign="top" align="right">
+      <div align="right">
+        <b>Improved conditional breakpoints</b>
+      </div>
     </td>
-    <td width="70%" valign="top" align="left">A traditional conditional breakpoint 
-      is triggered by a boolean expression evaluating to &quot;true&quot;. It 
-      is now possible to declare conditional breakpoints that are triggered whenever 
-      the value of an expression changes. 
+    <td width="70%" valign="top" align="left">A traditional conditional
+      breakpoint is triggered by a boolean expression evaluating to
+      &quot;true&quot;. It is now possible to declare conditional breakpoints
+      that are triggered whenever the value of an expression changes.
       <p><img src="images/conditional-breakpoint.gif" width="351" height="171"></p>
     </td>
   </tr>
-  <tr> 
+  <tr>
     <td width="30%" valign="top" align="right">
-      <div align="right"> <b>New ways to create watch items</b></div>
+      <div align="right">
+        <b>New ways to create watch items</b>
+      </div>
     </td>
-    <td width="70%" valign="top" align="left">The Java debugger can now create 
-      watch items from the Java editor by selecting an expression and using the 
-      <b>Watch</b> action (available in the context menu, and in the <b>Run</b> 
-      menu). As well, a watch item can be created by selecting a variable and 
-      using the <b>Watch</b> action.</td>
+    <td width="70%" valign="top" align="left">The Java debugger can now create
+      watch items from the Java editor by selecting an expression and using the <b>Watch</b>
+      action (available in the context menu, and in the <b>Run</b> menu). As
+      well, a watch item can be created by selecting a variable and using the <b>Watch</b>
+      action.</td>
   </tr>
-  <tr> 
+  <tr>
     <td width="30%" valign="top" align="right">
-      <div align="right"> <b>Step filters</b></div>
+      <div align="right">
+        <b>Step filters</b>
+      </div>
     </td>
-    <td width="70%" valign="top" align="left">Step filters are more convenient 
-      to use now that a <b>Step With Filters</b> action has been added to the 
-      debug toolbar and menu. As well, actions have been added to the debug context 
-      menu to streamline the creation of step filters for the type or package 
-      associated with the selected stack frame.</td>
+    <td width="70%" valign="top" align="left">Step filters are more convenient
+      to use now that a <b>Step With Filters</b> action has been added to the
+      debug toolbar and menu. As well, actions have been added to the debug
+      context menu to streamline the creation of step filters for the type or
+      package associated with the selected stack frame.</td>
   </tr>
-  <tr> 
-    <td width="30%" valign="top" align="right"><div align="right"> <b>Word wrap in Variables view</b> </div></td>
-    <td width="70%" valign="top" align="left">The details area of the debugger's 
-      <b>Variables</b> and <b>Expressions</b> views now supports word wrap, available 
-      from the view drop-down menu. 
+  <tr>
+    <td width="30%" valign="top" align="right">
+      <div align="right">
+        <b>Word wrap in Variables view</b>
+      </div>
+    </td>
+    <td width="70%" valign="top" align="left">The details area of the debugger's
+      <b>Variables</b> and <b>Expressions</b> views now supports word wrap,
+      available from the view drop-down menu.
       <p><img border="0" src="../tips/images/expressions-details-pane.gif" width="338" height="179"></p>
     </td>
   </tr>
-  <tr> 
+  <tr>
     <td width="30%" valign="top" align="right"><b>Stack trace<br>
       hyperlinks</b></td>
-    <td width="70%" valign="top" align="left">Java stack traces in the console 
-      now appear with hyperlinks. When you place the mouse over a line in a stack 
-      trace, the pointer changes to the hand and the stack trace is underlined. 
-      Pressing the mouse button opens the associated Java source file and positions 
-      the cursor at the corresponding line. 
+    <td width="70%" valign="top" align="left">Java stack traces in the console
+      now appear with hyperlinks. When you place the mouse over a line in a
+      stack trace, the pointer changes to the hand and the stack trace is
+      underlined. Pressing the mouse button opens the associated Java source
+      file and positions the cursor at the corresponding line.
       <p align="center"><img border="0" src="../tips/images/stack-trace-hyperlink.gif" width="416" height="133"></p>
     </td>
   </tr>
-  <tr> 
-    <td align="right" valign="top" width="30%"> 
-      <div align="right"> <b>More flexible Java source and output paths</b> </div>
+  <tr>
+    <td align="right" valign="top" width="30%">
+      <div align="right">
+        <b>More flexible Java source and output paths</b>
+      </div>
     </td>
-    <td width="70%" valign="top" align="left">The Java build path setup offers 
-      improved flexibility: 
+    <td width="70%" valign="top" align="left">The Java build path setup offers
+      improved flexibility:
       <ul>
-        <li>Exclusion filters let you exclude certain source files within a source 
-          folder from being compiled.</li>
-        <li>Source folders can now be nested, provided you use an exclusion filter 
-          on the parent to exclude the files of the other.</li>
-        <li>The location of generated class files can be set differently for each 
-          source folder.</li>
+        <li>Exclusion filters let you exclude certain source files within a
+          source folder from being compiled.</li>
+        <li>Source folders can now be nested, provided you use an exclusion
+          filter on the parent to exclude the files of the other.</li>
+        <li>The location of generated class files can be set differently for
+          each source folder.</li>
       </ul>
       <p align="center">&nbsp;</p>
     </td>
