--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_actionfilters.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_actionfilters.htm
@@ -15,10 +15,10 @@ Boolean expressions and action filters
 Boolean expressions and action filters</H2>
 <p>
 When a plug-in contributes an action to the workbench UI using one of the menu
-extension points, it can specify the conditions under which the menu item is enabled
-(or visible) in the menu.&nbsp; In addition to supplying simple enabling
+extension points, it can specify the conditions under which the menu item is
+visible and/or enabled in the menu.&nbsp; In addition to supplying simple enabling
 conditions, such as selection counts and selection classes, plug-ins can use <b>boolean
-expressions</b>  to enable an action.</p>
+expressions</b>  to make an action visible or enabled.</p>
 
 
 <h3>
@@ -77,8 +77,8 @@ attributes.</p>
            <b>&lt;pluginState id=&quot;x.y.z.anotherPlugin&quot; value=&quot;installed&quot;/&gt; </b>
        &lt;/enablement&gt; 
 &lt;/action&gt; </font></pre>
-<p CLASS="CellBody">See <a href="../reference/extension-points/actionExpressions.html">action
-expressions </a>for more elaborate samples of these expressions and a complete description of
+<p CLASS="CellBody">See the reference documentation of the extension points
+below for more elaborate samples of these expressions and a complete description of
 the XML.</p>
 
 
@@ -107,7 +107,10 @@ Boolean expressions</P>
 <TD width="118">
 <P CLASS="CellBody">
 <b>
-viewActions</b></P>
+<a href="../reference/extension-points/org_eclipse_ui_viewActions.html">
+viewActions</a></b>,</P>
+<P CLASS="CellBody"><b><a href="../reference/extension-points/org_eclipse_ui_editorActions.html">editorActions</a></b>,</P>
+<P CLASS="CellBody"><b><a href="../reference/extension-points/org_eclipse_ui_actionSets.html">actionSets</a></b></P>
 </TD>
 <TD width="359">
 <P CLASS="CellBody">
@@ -115,41 +118,19 @@ viewActions</b></P>
 action to be enabled</P>
 <P CLASS="CellBody">
 <b>selection</b> <b>class</b> - the class that the selected objects must
-subclass or implement to enable the action</P>
+subclass or implement in order for the action to be enabled</P>
 <P CLASS="CellBody">
 <b>selection</b> <b>name</b> - a wild card filter that can be applied to the
 objects in the selection.</P>
 </TD>
 <TD width="335">
 <P CLASS="CellBody">
-<b>enablement</b> - a boolean expression.</P>
+<b>visibility</b> - a boolean expression.&nbsp; Controls whether the menu item
+is visible in the menu.</P>
 <P CLASS="CellBody">
-The <b>selection</b> <b>class</b>, <b>name</b>, and <b>enablesFor</b> must be
-satisfied before applying the enablement expression.</P>
-</TD>
-</TR>
-<TR>
-<TD width="118">
-<P CLASS="CellBody"><b>editorActions</b></P>
-</TD>
-<TD width="359">
-<P CLASS="CellBody">
-<b>enablesFor</b> - specifies the selection count that must be met for the
-action to be enabled</P>
-<P CLASS="CellBody">
-<b>selection</b> <b>class</b> - the class that the selected objects must
-subclass or implement to enable the action</P>
-<P CLASS="CellBody">
-<b>selection</b> <b>name</b> - a wild card filter that can be applied to the
-objects in the selection.</P>
-<P CLASS="CellBody">
-&nbsp;</P>
-</TD>
-<TD width="335">
-<P CLASS="CellBody">
-<b>enablement</b> - a boolean expression.</P>
-<P CLASS="CellBody">
-The <b>selection</b> <b>class</b>, <b>name</b>, and <b>enablesFor</b> must be
+<b>enablement</b> - a boolean expression.&nbsp; Controls whether the menu item
+is enabled in the menu.&nbsp; The <b>enablesFor</b>  attribute and the <b>selection</b> <b>class</b>
+and <b>name</b>, and must be
 satisfied before applying the enablement expression.</P>
 </TD>
 </TR>
@@ -157,7 +138,8 @@ satisfied before applying the enablement expression.</P>
 <TD width="118">
 <P CLASS="CellBody">
 <b>
-popupMenus</b></P>
+<a href="../reference/extension-points/org_eclipse_ui_popupMenus.html">
+popupMenus</a></b></P>
 </TD>
 <TD width="359">
 <P CLASS="CellBody">
@@ -166,7 +148,7 @@ popupMenus</b></P>
 <b>objectClass</b> - specifies the class that objects in the selection must
 subclass or implement</P>
 <P CLASS="CellBody">
-(For object and viewer contributions)</P>
+(For both object and viewer contributions)</P>
 <P CLASS="CellBody">
 <b>enablesFor</b> - specifies the selection count that must be met for the
 action to be enabled</P>
@@ -181,41 +163,14 @@ objects in the selection.</P>
 </TD>
 <TD width="335">
 <P CLASS="CellBody">
-<b>visibility</b> - a boolean expression.</P>
+(For both object and viewer contributions)</P>
 <P CLASS="CellBody">
-The <b>selection</b> <b>class</b>, <b>name</b>, and <b>enablesFor</b> must be
-satisfied before applying the enablement expression.</P>
-<P CLASS="CellBody">
-&nbsp;</P>
-</TD>
-</TR>
-<TR>
-<TD width="118">
-<P CLASS="CellBody">
-<b>
-actionSets</b></P>
-</TD>
-<TD width="359">
-<P CLASS="CellBody">
-<b>enablesFor</b> - specifies the selection count that must be met for the
-action to be enabled</P>
-<P CLASS="CellBody">
-<b>selection</b> <b>class</b> - the class that the selected objects must
-subclass or implement to enable the action</P>
-<P CLASS="CellBody">
-<b>selection</b> <b>name</b> - a wild card filter that can be applied to the
-objects in the selection.</P>
-<P CLASS="CellBody">
-&nbsp;</P>
-</TD>
-<TD width="335">
-<P CLASS="CellBody">
-<b>enablement</b> - a boolean expression.</P>
-<P CLASS="CellBody">
-The <b>selection</b> <b>class</b>, <b>name</b>, and <b>enablesFor</b> must be
-satisfied before applying the enablement expression.</P>
-<P CLASS="CellBody">
-&nbsp;</P>
+<b>visibility</b> - a boolean expression.&nbsp; Controls whether the menu item
+is visible in the menu.</P>
+<p CLASS="CellBody"><b>enablement</b> - a boolean expression.&nbsp; Controls
+whether the menu item is enabled in the menu.&nbsp;
+The <b>enablesFor</b>  attribute and the <b>selection</b> <b>class</b> and <b>name</b>, and must be
+satisfied before applying the enablement expression.
 </TD>
 </TR>
 </TABLE>
