--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_menupaths.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_menupaths.htm
@@ -15,15 +15,20 @@ Menu and toolbar paths
 <h2>
 Menu and toolbar paths</h2>
 <P >
-We've seen many action contributions that specify the path for the location of their action. Let's take a close look at what these paths mean.&nbsp;
-We'll look at paths by looking at the workbench <b>Help</b> menu.</P>
+We've seen many action contributions that specify the path for the location of their action. Let's take a close look at what these paths mean.&nbsp;&nbsp;</P>
+
+<h3 >
+Menu paths</h3>
+
+<P >
+We'll look at menu paths first by looking at the workbench <b>Help</b> menu.</P>
 
 <H4>
-Named groups</H4>
+Named groups in the workbench</H4>
 <P >
-The locations for inserting new menus, menu items, or tool bar items are defined using named groups. You can think of
-a named group as a slot or placeholder that allows you to insert your menu and toolbar contributions at certain points in a menu or
-toolbar.</P>
+The locations for inserting new menus and menu items are defined using named groups. You can think of
+a named group as a slot or placeholder that allows you to insert your menu items
+at certain points in a menu bar or pulldown menu.</P>
 <P >
 The workbench defines all of its group slot names in the class <b><a href="../reference/api/org/eclipse/ui/IWorkbenchActionConstants.html">IWorkbenchActionConstants</a></b>. For each workbench menu, named groups are placed in the menu at locations where it is expected that
 plug-ins will insert new actions.</P>
@@ -65,14 +70,12 @@ the markup from the <b>org.eclipse.help.ui</b> plug-in's
 <P >
 The new help action will be placed in the help menu, inside the <b> helpEnd</b> group. If no other plug-in has contributed to the help menu, this means the &quot;Help Contents&quot; menu item will appear as the first item in the menu above the &quot;About&quot; item. If another plug-in wanted to contribute an item that always appeared above the &quot;Help Contents&quot; item, then it could specify the
 <b> helpStart</b> group on its path.&nbsp;&nbsp;</P>
-<P >
-Toolbar paths work similarly. Whenever a path is specified, it must end with the name of a group in the toolbar.</P>
 
 
 <H4>
-Fully qualified menu and tool paths</H4>
+Fully qualified menu paths</H4>
 <P >
- A complete menu or toolbar path is simply &quot;menu name/group
+ A complete menu path is simply &quot;menu name/group
  name.&quot;&nbsp; Menu names for the workbench are defined in
 <b><a href="../reference/api/org/eclipse/ui/IWorkbenchActionConstants.html">IWorkbenchActionConstants</a></b>. This
  class is used to find that the fully qualified path name for our help action is
@@ -103,7 +106,7 @@ will not need to be modified.</P>
 <H4>
 Adding new menus and groups</H4>
 <P >
-In many of the examples we've seen so far, the actions contributed by the sample plug-ins have been added to existing named groups within menus and toolbars.</P>
+In many of the examples we've seen so far, the actions contributed by the sample plug-ins have been added to existing named groups within menus.</P>
 <P >
 The <b><a href="../reference/extension-points/org_eclipse_ui_actionSets.html">actionSets</a></b>,
 <b><a href="../reference/extension-points/org_eclipse_ui_viewActions.html">viewActions</a></b>,
@@ -119,15 +122,15 @@ paths in more detail. </P>
    &lt;actionSet id=&quot;org_eclipse_ui_examples_readmetool_actionSet&quot;
 	   label=&quot;%ActionSet.name&quot;
 	   visible=&quot;true&quot;&gt;
-	   &lt;menu id=&quot;org_eclipse_ui_examples_readmetool&quot;
+	   &lt;<b>menu id=&quot;org_eclipse_ui_examples_readmetool&quot;</b>
 		   label=&quot;%ActionSet.menu&quot;
-		   path=&quot;window/additions&quot;&gt; 
+		   <b>path=&quot;window/additions&quot;</b>&gt; 
 		   &lt;separator name=&quot;slot1&quot;/&gt;
 		   &lt;separator name=&quot;slot2&quot;/&gt;
 		   &lt;separator name=&quot;slot3&quot;/&gt;
 	   &lt;/menu&gt;
 	   &lt;action id=&quot;org_eclipse_ui_examples_readmetool_readmeAction&quot;
-		   menubarPath=&quot;window/org_eclipse_ui_examples_readmetool/slot1&quot;
+		   <b>menubarPath=&quot;window/org_eclipse_ui_examples_readmetool/slot1&quot;</b>
 		   toolbarPath=&quot;readme&quot;
 		   label=&quot;%ReadmeAction.label&quot;
 		   tooltip=&quot;%ReadmeAction.tooltip&quot;
@@ -191,12 +194,127 @@ the path &quot;<b>window/org_eclipse_ui_examples_readmetool/slot1</b>.&quot; </P
 of the other slots) to add one of their own menus.&nbsp;&nbsp; </P>
 
 
+<P >In the readme tool example, we use the <b>separator</b> attribute to
+identify the group names.&nbsp; This will cause a separator line to appear
+between these groups when they contain items.&nbsp; We could instead use the <b>groupMarker</b>
+attribute if we want to define a named group without showing any separators in
+the menu to distinguish between the groups. </P>
+
+
+<h3 >Tool bar paths </h3>
+
+
+<p>Tool bar paths work similarly to menu paths.&nbsp;&nbsp;</p>
+
+
+<h4>Named tool bars in the workbench</h4>
+
+
+<p>The workbench tool bar is composed of
+tool bars contributed by different plug-ins, including the workbench
+itself.&nbsp; Within any particular tool bar, there are named groups or slots that can be used for inserting new tool bar items.
+&nbsp;&nbsp;&nbsp;</p>
+<P >
+The following description of the workbench tool bars is adapted from the <a href="../reference/api/org/eclipse/ui/IWorkbenchActionConstants.html"><b> IWorkbenchActionConstants</b></a>
+class definition.</P>
+<font color='#4444CC'><pre>// Workbench toolbar ids
+public static final String TOOLBAR_FILE = &quot;org.eclipse.ui.workbench.file&quot;
+public static final String TOOLBAR_NAVIGATE = &quot;org.eclipse.ui.workbench.navigate&quot;; 
+
+// Workbench toolbar group ids.  To add an item at the beginning of the group, 
+// use the GROUP id.  To add an item at the end of the group, use the EXT id.
+public static final String PIN_GROUP = &quot;pin.group&quot;; 
+public static final String HISTORY_GROUP = &quot;history.group&quot;; 
+public static final String NEW_GROUP = &quot;new.group&quot;; 
+public static final String SAVE_GROUP = &quot;save.group&quot;; 
+public static final String BUILD_GROUP = &quot;build.group&quot;; </pre></font>
+<p>In the simplest case, a plug-in can contribute a tool bar item in its own
+tool bar.&nbsp; For example, the readme tool actions contributed to the menu are
+also given a tool bar path:  </p>
+<pre><font color='#4444CC'>...
+&lt;action id=&quot;org_eclipse_ui_examples_readmetool_readmeAction&quot;&nbsp;&nbsp;
+   menubarPath=&quot;window/org_eclipse_ui_examples_readmetool/slot1&quot;
+&nbsp;&nbsp; <b>toolbarPath=&quot;readme&quot;
+</b></font>...</pre>
+<p>Since there is no reference to the workbench tool bar paths or groups, the
+readme actions appear in their own group on the tool bar.&nbsp; Specifying the
+following path would instead place the item in the file tool bar in the save
+group:</p>
+<pre><font color='#4444CC'>...
+&lt;action id=&quot;org_eclipse_ui_examples_readmetool_readmeAction&quot;&nbsp;&nbsp;
+   menubarPath=&quot;window/org_eclipse_ui_examples_readmetool/slot1&quot;
+&nbsp;&nbsp; <b>toolbarPath=&quot;org.eclipse.ui.workbench.file/save.group&quot;
+</b></font>...</pre>
+<p>The paths defined in <a href="../reference/api/org/eclipse/ui/IWorkbenchActionConstants.html"><b> IWorkbenchActionConstants</b></a>
+ may be referenced in the tool bar paths of other plug-ins.</p>
+<h4>Appending to action sets of another plug-in</h4>
+<p>Suppose a plug-in wants its tool bar items better integrated with actions
+from a different plug-in?&nbsp; Let's look at how the external
+tools plug-in (<b>org.eclipse.ui.externaltools</b>) integrates its action with the debugger tool bar.&nbsp; The
+debugger (<b>org.eclipse.debug.ui</b>) defines its tool bar actions like this:</p>
+<pre><font color='#4444CC'>&lt;extension
+      point=&quot;org.eclipse.ui.actionSets&quot;&gt;
+   &lt;actionSet
+         label=&quot;%LaunchActionSet.label&quot;
+         visible=&quot;false&quot;
+         id=&quot;org.eclipse.debug.ui.launchActionSet&quot;&gt;
+   ...
+   &lt;action
+         <b>toolbarPath=&quot;debug&quot;</b>
+         id=&quot;org.eclipse.debug.internal.ui.actions.RunDropDownAction&quot;
+         hoverIcon=&quot;icons/full/ctool16/run_exc.gif&quot;
+         class=&quot;org.eclipse.debug.internal.ui.actions.RunToolbarAction&quot;
+         disabledIcon=&quot;icons/full/dtool16/run_exc.gif&quot;
+         icon=&quot;icons/full/etool16/run_exc.gif&quot;
+         helpContextId=&quot;run_action_context&quot;
+         label=&quot;%RunDropDownAction.label&quot;
+         pulldown=&quot;true&quot;&gt;
+   &lt;/action&gt;
+   ...</pre></font>
+<p>Just like the readme tool, the debugger plug-in defines its own tool bar
+path, which means its tool bar items will be inside their own tool bar on the
+workbench.&nbsp; What does the external tools plug-in do?</p>
+<pre><font color="#4444CC">&lt;extension point=&quot;org.eclipse.ui.actionSets&quot;&gt;
+	&lt;actionSet
+		id=&quot;org.eclipse.ui.externaltools.ExternalToolsSet&quot;
+		label=&quot;%ActionSet.externalTools&quot;
+		visible=&quot;true&quot;&gt;
+		...
+		&lt;action
+			id=&quot;org.eclipse.ui.externaltools.ExternalToolMenuDelegateToolbar&quot;
+			definitionId= &quot;org.eclipse.ui.externaltools.ExternalToolMenuDelegateToolbar&quot;
+			label=&quot;%Action.externalTools&quot;
+			<b>toolbarPath=&quot;org.eclipse.debug.ui.launchActionSet/debug&quot;</b>
+			disabledIcon=&quot;icons/full/dtool16/external_tools.gif&quot;
+			icon=&quot;icons/full/etool16/external_tools.gif&quot;
+			hoverIcon=&quot;icons/full/ctool16/external_tools.gif&quot;
+			tooltip=&quot;%Action.externalToolsTip&quot;
+			pulldown=&quot;true&quot;
+			class=&quot;org.eclipse.ui.externaltools.internal.menu.ExternalToolMenuDelegate&quot;&gt;
+		&lt;/action&gt;
+	&lt;/actionSet&gt;
+&lt;/extension&gt;</font></pre><p>Note the use of the action set ID of the
+debugger in the tool bar path.&nbsp; Using an action set ID in the path denotes
+that the tool bar item should be placed in the tool bar used by the referenced
+action set.&nbsp; The tool bar path defined in that action set is appended to
+the action set ID.</p>
+<h3 >Using paths from another plug-in </h3>
+
+
 <P >In general, it's not good practice to contribute to another plug-in's menu
-or tool bar by deriving the path name from the <b>plugin.xml</b>.&nbsp;
-It's possible that a future version of the plug-in could change the names of the
-paths.&nbsp; The recommended practice is to define a public interface (much like <b><a href="../reference/api/org/eclipse/ui/IWorkbenchActionConstants.html">IWorkbenchActionConstants</a></b>)
+or tool bar by deriving the path name from the <b>plugin.xml</b> unless it has
+been marked specifically as being available for clients.&nbsp; It's possible that a future version of the plug-in could change the names of the
+paths.&nbsp; Two common ways to mark your plug-in's action set ids and paths as
+fair game are: </P>
+
+
+<ul>
+  <li>annotate the XML with comments that explicitly mark the menu path or
+    action set as usable by clients</li>
+  <li>define a public interface (much like <b><a href="../reference/api/org/eclipse/ui/IWorkbenchActionConstants.html">IWorkbenchActionConstants</a></b>)
 which specifies exactly which menus, tool bar groups, and slots are considered
-fair game for use by other plug-ins. </P>
+fair game for use by other plug-ins</li>
+</ul>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corp. and others 2000,2002." width="250" height="12"></a></p>
