--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_workingsets.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_workingsets.htm
@@ -22,10 +22,10 @@ techniques.</p>
     can be used to filter by file name.&nbsp; Plug-ins contribute resource
     filters that the user can enable using a view's filter selection dialog.</li>
   <li><b>Working sets</b> can be used to filter resources by only including
-    specified resources.&nbsp; Working sets are selected and defined using the
-    view's filter selection dialog.</li>
+    specified resources.&nbsp; Working sets are selected using the view's
+    working set dialog.</li>
 </ul>
-<p><img alt="" border="0" src="images/workingset.jpg" width="438" height="474"></p>
+<p><img border="0" alt="" src="images/workingset.jpg" width="282" height="372"></p>
 <p>If your plug-in implements a view that shows resources (or objects that are
 adaptable to <a href="../reference/api/org/eclipse/core/resources/IResource.html"><b>IResource</b></a>),
 you should support working sets.&nbsp; <b><a href="../reference/api/org/eclipse/ui/IWorkingSetManager.html">IWorkingSetManager</a>
@@ -39,6 +39,8 @@ API.</p>
   <li><b>createWorkingSetSelectionDialog</b> - opens a working set dialog that
     shows the user the current working sets and answers the selected working
     sets</li>
+  <li><b>createWorkingSetEditWizard</b> - opens a working set edit wizard for
+    editing the specified working set</li>
   <li><b>getWorkingSets()</b> - returns a list of all defined working sets</li>
   <li><b>getWorkingSet(String name) </b>- returns a working set specified by
     name</li>
@@ -61,9 +63,22 @@ Working set types are shown when the user decides to add a working set.</p>
 <p><img border="0" src="images/workingSetTypes.jpg" width="438" height="431" alt="Working set dialog showing list of available types"></p>
 
 
+<p>&nbsp;</p>
+
+
+<p>When you define your own type of working set, you can use <b><a href="../reference/api/org/eclipse/ui/IWorkingSet.html">IWorkingSet</a>.getId</b>
+protocol to ensure that the working set matches the type that you have
+defined.&nbsp; Any working sets that you create programmatically must have their
+id set to the id of the working set extension page that created it.&nbsp; This
+id is used to ensure that the proper working set edit page is launched when the
+user edits the working set.&nbsp; A null id indicates that the working set
+should use the default resource working set type.</p>
+
+
 <p>See the
 <b><a href="../reference/extension-points/org_eclipse_ui_workingSets.html">org.eclipse.ui.workingSets</a>
-</b>extension point documentation for more detail.</p>
+</b>extension point documentation and <b><a href="../reference/api/org/eclipse/ui/IWorkingSet.html">IWorkingSet</a></b>
+protocol for more detail.</p>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corp. and others 2000,2002." width="250" height="12"></a></p>
