*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_retarget.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_retarget.htm
@@ -38,12 +38,13 @@ global.&nbsp; For example, here is the definition of the <b>Properties</b> actio
 that are implemented by views and editors:</p>
 
 
-<table border="1" cellpadding="0" cellspacing="0" width="51%">
+<table border="1" cellpadding="0" cellspacing="0" width="64%">
   <tr>
     <td width="26%">&nbsp;</td>
     <td width="56%"><b>File menu</b></td>
     <td width="92%"><b>Edit menu</b></td>
     <td width="74%"><b>Navigate menu</b></td>
+    <td width="74%"><b>Project menu</b></td>
   </tr>
   <tr>
     <td width="26%"><b>views</b></td>
@@ -53,17 +54,24 @@ that are implemented by views and editors:</p>
       properties</td>
     <td width="92%">&nbsp;</td>
     <td width="74%">go into<br>
+      go to resource<br>
+      sync with editor<br>
       back<br>
       forward<br>
       up<br>
       next<br>
       previous</td>
+    <td width="74%">open<br>
+      close<br>
+      build<br>
+      rebuild</td>
   </tr>
   <tr>
     <td width="26%"><b>editors</b></td>
     <td width="56%">revert<br>
       print</td>
     <td width="92%">find</td>
+    <td width="74%">&nbsp;</td>
     <td width="74%">&nbsp;</td>
   </tr>
   <tr>
@@ -76,6 +84,7 @@ that are implemented by views and editors:</p>
       select all<br>
       undo<br>
       redo</td>
+    <td width="74%">&nbsp;</td>
     <td width="74%">&nbsp;</td>
   </tr>
 </table>
