*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/resInt_filesystem.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/resInt_filesystem.htm
@@ -181,7 +181,8 @@ for more information.&nbsp; You can also use <a href="../reference/api/org/eclip
 
 
 <H3>
-Mapping resources to disk locations</H3>
+<a name="mapping">
+Mapping resources to disk locations</a></H3>
 <P >
   In the sample resource tree, we've assumed that all of the project content directories are
 in the <b>workspace</b> directory underneath the platform root
