--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_fonts.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_fonts.htm
@@ -28,7 +28,7 @@ plug-in with all of the other font preferences installed in the workbench.&nbsp;
 For example, the debugger contributes a font setting for console text:</p>
 
 
-<p><img border="0" src="images/fontdefinitions.jpg" width="603" height="534">&nbsp;</p>
+<p><img border="0" alt="Font definitions preference page showing list of fonts" src="images/fontdefinitions.jpg" width="721" height="534"></p>
 
 
 <p> This font definition is contributed by the debugger using the <a href="../reference/extension-points/org_eclipse_ui_fontDefinitions.html"><b>org.eclipse.ui.fontDefinitions</b></a>
