--- a/bundles/org.eclipse.platform.doc.isv/guide/editors_workbench.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/editors_workbench.htm
@@ -41,6 +41,31 @@ that is a file in the file system.&nbsp;
 that is a stream of bytes. These bytes may come from sources other than the file system.</P>
 
 
+<h3 >
+Resetting the editor input</h3>
+
+
+<P >If the implementation of your editor can support the replacement of the
+editor's input object on the fly, you should implement&nbsp; <a href="../reference/api/org/eclipse/ui/IReusableEditor.html"><b>IReusableEditor</b></a>.
+Implementing this interface allows the workbench to &quot;recycle&quot; your
+editor.&nbsp; Workbench user preferences allow the user to dictate that editors
+should be reused after a user-designated number of them are open.</P>
+
+
+<h3 >
+Navigating the editor input&nbsp;</h3>
+
+
+<P >If you want to implement a navigation history in your editor, you should
+implement <a href="../reference/api/org/eclipse/ui/INavigationLocationProvider.html"><b>INavigationLocationProvider</b></a>.&nbsp;
+This provides a mechanism for the workbench to request the current navigation
+location (<a href="../reference/api/org/eclipse/ui/INavigationLocation.html"><b>INavigationLocation</b></a>)<b>
+</b>as needed to keep a navigation history.&nbsp; The workbench handles the
+mechanics of the navigation user interface.&nbsp; Your <a href="../reference/api/org/eclipse/ui/INavigationLocation.html"><b>INavigationLocation</b></a><b>
+</b>will be notified when it needs to restore the editor to the location that it
+represents.</P>
+
+
 <P >The rest of your editor's implementation depends on the content that you are
 trying to present.&nbsp; We'll look next at the most common type of editor - the
 text editor.</P>
