*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_structure.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_structure.htm
@@ -44,6 +44,19 @@ Page</H3>
 Inside the workbench window, you'll find one page (<b><a href="../reference/api/org/eclipse/ui/IWorkbenchPage.html">IWorkbenchPage</a></b>) that in turn contains parts. Pages are an implementation mechanism for grouping parts. You typically don't need to program to the page, but you'll see it in the context of programming and debugging. </P>
 
 
+<h3 >
+Perspectives</h3>
+
+<P >
+Perspectives provide an additional layer of organization inside the workbench
+page.&nbsp; A perspective defines an appropriate collection of views, their
+layout, and applicable actions for a given user task.&nbsp; Users can switch
+between perspectives as they move across tasks.&nbsp;&nbsp; From an
+implementation point of view, the user's active perspective controls which views
+are shown on the workbench page and their positions and sizes.&nbsp; Editors are
+not affected by a change in perspective.</P>
+
+
 <H3>
 <a name="views_and_editors">
 Views and editors</a></H3>
