*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_perspectiveExtension.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/workbench_advext_perspectiveExtension.htm
@@ -15,7 +15,7 @@
 <H3>
 org.eclipse.ui.perspectiveExtensions</H3>
 <P >
- Plug-ins can add action sets, views, and various shortcuts to existing
+ Plug-ins can add their own action sets, views, and various shortcuts to existing
  perspectives by contributing to the <b><a href="../reference/extension-points/org_eclipse_ui_perspectiveExtensions.html">org.eclipse.ui.perspectiveExtensions</a></b>
  extension point.</P>
 
@@ -97,8 +97,24 @@ should be added to the <b>Window-&gt;Open Perspective... </b>menu of the target
 perspective.&nbsp; This markup is analogous to calling <b>IPageLayout.addPerspectiveShortcut</b>
 in the original perspective definition in the <b><a href="../reference/api/org/eclipse/ui/IPerspectiveFactory.html">IPerspectiveFactory</a></b>.&nbsp;
 Plug-ins can also add view shortcuts and new wizard shortcuts in a similar
-manner.&nbsp; See <b><a href="../reference/extension-points/org_eclipse_ui_perspectiveExtensions.html">org.eclipse.ui.perspectiveExtensions</a></b>
+manner.&nbsp;&nbsp;</P>
+
+
+<P >You can also specify one or more views as a <b>showInPart</b>.&nbsp; The
+views should be specified by the id used in their <b><a href="../reference/extension-points/org_eclipse_ui_views.html">org.eclipse.ui.views</a></b>
+extension contribution.&nbsp;&nbsp; This controls which views are available as
+targets in the <b>Navigate &gt; Show In </b>menu.&nbsp; The ability to specify a
+&quot;show in&quot; view in the extension markup provides allows you to add your
+newly contributed views as targets in another perspective's &quot;show in&quot;
+menus.&nbsp; See <a href="workbench_perspectives.htm#showin">Linking views and
+editors</a> for more information on &quot;show in.&quot;</P>
+
+
+<P > See <b><a href="../reference/extension-points/org_eclipse_ui_perspectiveExtensions.html">org.eclipse.ui.perspectiveExtensions</a></b>
 for a complete definition of the extension point.</P>
+
+
+<P >&nbsp;</P>
 
 
 <p><a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corp. and others 2000,2002." width="250" height="12"></a></p>
