Added more tips and spell checked

--- a/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
+++ b/bundles/org.eclipse.platform.doc.user/tips/platform_tips.html
@@ -143,11 +143,11 @@ and Tricks.]</p>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>Now where was I?</b></td>
-    <td width="70%" valign="top" align="left">Workbench editors now keep a
-      navigation history. If&nbsp; you open a second editor while you're editing
-      away, you can hit&nbsp; ALT+LeftArrow (Navigate &gt; Backward, or the back
-      arrow on the workbench toolbar) to get back. Working with lots of open
-      editors just got a whole lot easier.</td>
+    <td width="70%" valign="top" align="left">Workbench editors now keep a navigation 
+      history. If&nbsp; you open a second editor while you're editing away, you 
+      can hit&nbsp; ALT+Left Arrow (Navigate &gt; Backward, or the back arrow 
+      on the workbench toolbar) to get back. Working with lots of open editors 
+      just got a whole lot easier.</td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>Sort tasks by creation time</b></td>
@@ -199,9 +199,9 @@ and Tricks.]</p>
   <tr>
     <td width="30%" valign="top" align="right"><b>Restoring deleted files from
       CVS</b></td>
-    <td width="70%" valign="top" align="left">Deleted files can now be queried
-      and restored from the CVS repository using the <b>Team &gt; Restore from
-      Repository...</b> command, which is available on CVS projects and folders.</td>
+    <td width="70%" valign="top" align="left">Deleted files can now be queried 
+      and restored from the CVS repository using the <b>Team &gt; Restore from 
+      Repository..</b> command, which is available on CVS projects and folders.</td>
   </tr>
   <tr>
     <td width="30%" valign="top" align="right"><b>CVS Quick Sync</b></td>
@@ -219,6 +219,25 @@ and Tricks.]</p>
       changed in or deleted from a workspace without queuing up outgoing CVS
       changes. And CVS projects can now be configured to not fetch absent
       directories on update.</td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Close All Editors on Exit</b></td>
+    <td width="70%" valign="top" align="left">A new preference that closes all
+	editors on workbench exit so that you restart with an empty editor area. 
+	Useful if you wish to improve your startup time.</td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>About Dialog > Configuration Details</b></td>
+    <td width="70%" valign="top" align="left">The Configuration Details button 
+      on the <b>Help &gt; About Eclipse Platform dialog</b> will open a text editor 
+      with your plug-in information, your current preferences and the contents 
+      of your log file.</td>
+  </tr>
+  <tr>
+    <td width="30%" valign="top" align="right"><b>Customizing toolbar and menu entries</b></td>
+    <td width="70%" valign="top" align="left">Any selected items in the Other 
+      category in the <b>Window &gt; Customize Perspective dialog</b> will appear 
+      on the tool bar or menu bar.</td>
   </tr>
 </table>
 
