*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -52,7 +52,7 @@
   </tr>
   <tr> 
     <td width="30%" valign="top" align="right"><b>Controlling<br>
-      the console</b></td>
+      your console</b></td>
     <td width="70%" valign="top" align="left">Output displayed in the console 
       can be locked to a specific process via a drop-down menu in the Console 
       view toolbar. There's also a new scroll lock button that stops the console 
@@ -61,22 +61,23 @@
     </td>
   </tr>
   <tr> 
-    <td width="30%" valign="top" align="right"><b>New ways to<br>
-      create watch<br>
-      items</b></td>
-    <td width="70%" valign="top" align="left">The Java debugger can now create 
-      watch items from the Java editor by selecting an expression and using the 
-      <b>Watch</b> action (available in the context menu, and in the <b>Run</b> 
-      menu). As well, a watch item can be created by selecting a variable and 
-      using the <b>Watch</b> action.</td>
+    <td width="30%" valign="top" align="right"><div aligh="right"> <b>Creating watch items</b> </div></td>
+    <td width="70%" valign="top" align="left">The Java debugger can create watch 
+      items from the Java editor by selecting an expression and using the <b>Watch</b> 
+      action (available in the context menu, and in the <b>Run</b> menu). As well, 
+      a watch item can be created by selecting a variable and using the <b>Watch</b> 
+      action.</td>
   </tr>
   <tr> 
     <td width="30%" valign="top" align="right"><b>Step filters</b></td>
-    <td width="70%" valign="top" align="left">Step filters are more convenient 
-      to use now that a <b>Step With Filters</b> action has been added to the 
-      debug toolbar and menu. As well, actions have been added to the debug context 
-      menu to streamline the creation of step filters for the type or package 
-      associated with the selected stack frame.</td>
+    <td width="70%" valign="top" align="left">Step filters prevent the debugger 
+      from suspending in specified classes and packages when stepping through 
+      code. Step filters are established in Window&gt;Preferences&gt;Java&gt;Debug&gt;Step 
+      Filtering. Step filters are in effect when the <b>Step With Filters</b> 
+      action (on the debug toolbar and menu) is invoked. In the Debug view, the 
+      selected stack frame's package or declaring type can be quickly added to 
+      the list of filters by selecting <b>Filter Type</b> or <b>Filter Package</b> 
+      from the stack frame's context menu.</td>
   </tr>
   <tr> 
     <td width="30%" valign="top" align="right"><b>Editing<br>
@@ -93,7 +94,7 @@
       Variables<br>
       view</b></td>
     <td width="70%" valign="top" align="left">The details area of the debugger's 
-      <b>Variables</b> and <b>Expressions</b> views now supports word wrap, available 
+      <b>Variables</b> and <b>Expressions</b> views supports word wrap, available 
       from the view drop-down menu. 
       <p><img border="0" src="images/expressions-details-pane.gif" width="338" height="179"></p>
     </td>
@@ -101,12 +102,13 @@
   <tr> 
     <td width="30%" valign="top" align="right"><b>Stack trace<br>
       hyperlinks</b></td>
-    <td width="70%" valign="top" align="left">Java stack traces in the console 
-      now appear with hyperlinks. When you place the mouse over a line in a stack 
-      trace, the pointer changes to the hand and the stack trace is underlined. 
-      Pressing the mouse button opens the associated Java source file and positions 
-      the cursor at the corresponding line. 
-      <p align="center"><img border="0" src="images/stack-trace-hyperlink.gif" width="416" height="133"></p>
+    <td width="70%" valign="top" align="left">
+      <p>Java stack traces in the console now appear with hyperlinks. When you 
+        place the mouse over a line in a stack trace, the pointer changes to the 
+        hand and the stack trace is underlined. Pressing the mouse button opens 
+        the associated Java source file and positions the cursor at the corresponding 
+        line.</p>
+      <p><img border="0" src="images/stack-trace-hyperlink.gif" width="416" height="133"></p>
     </td>
   </tr>
 </table>
