--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -120,12 +120,13 @@ size throughout.]</p>
   <tr>
     <td width="30%" valign="top" align="right"><b>Stack trace<br>
       hyperlinks</b></td>
-    <td width="70%" valign="top" align="left">Java stack traces in the console
-      now appear with hyperlinks. When you place the mouse over a line in a
-      stack trace, the pointer changes to the hand and the stack trace is
-      underlined. Pressing the mouse button opens the associated Java source
-      file and positions the cursor at the corresponding line.
-      <p align="center"><img border="0" src="../tips/images/stack-trace-hyperlink.gif" width="416" height="133"></p>
+    <td width="70%" valign="top" align="left">
+      <p>Java stack traces in the console now appear with hyperlinks. When you 
+        place the mouse over a line in a stack trace, the pointer changes to the 
+        hand and the stack trace is underlined. Pressing the mouse button opens 
+        the associated Java source file and positions the cursor at the corresponding 
+        line.</p>
+      <p><img border="0" src="../tips/images/stack-trace-hyperlink.gif" width="416" height="133"></p>
     </td>
   </tr>
   <tr>
