*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tips/tips-11.htm
@@ -96,7 +96,7 @@
     <td width="70%" valign="top" align="left">The details area of the debugger's 
       <b>Variables</b> and <b>Expressions</b> views supports word wrap, available 
       from the view drop-down menu. 
-      <p><img border="0" src="images/expressions-details-pane.gif" width="338" height="179"></p>
+      <p><img src="images/variables-details-pane.gif" width="352" height="218"></p>
     </td>
   </tr>
   <tr> 
