--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-2.htm
@@ -45,10 +45,13 @@
       <li>
         Select <b>Java &gt; Installed JREs</b> in the tree pane on the left to
         display the <strong>Installed Java Runtime Environments</strong> preference page. Confirm
-        that a JRE has been detected. By default, the JRE used to run the workbench will be used to build and run Java programs. It should appear with a check mark in the list of
-        installed JREs.
+        that a JRE has been detected. By default, the JRE used to run the workbench will be used to build and run 
+        Java programs. It should appear with a check mark in the list of installed JREs. We recommend that you
+        use a Java SDK instead of a JRE. A SDK is designed for development and contains the source code for the
+        Java library hence easing debugging. Additional SDK can be added by searching the harddrive for installed
+        SDKs. To do so simply click the <strong>Search</strong> button and specify a root folder for the search.
 		<p>
-		<img src="../images/qs-1.gif" alt="Installed JREs preference page" width="429" height="98">
+		<img src="../images/qs-1.gif" alt="Installed JREs preference page">
 		</p>
       </li>
       <li>
@@ -66,8 +69,8 @@
 		</p>
       </li>
       <li>
-        Select <strong>Java &gt; Editor</strong> in the tree pane to display the <strong>Java Editor</strong> preference page. On the preference page, press the <strong>Problem
-        Indication</strong> tab. Confirm that all options are checked.
+        Select <strong>Java &gt; Editor</strong> in the tree pane to display the <strong>Java Editor</strong> preference page. On the preference page, 
+        press the <strong>Annotations</strong> tab. Confirm that all options are checked.
 		<p>
 		<img src="../images/qs-17a.gif" alt="Java Editor preference page">
 		</p>
