*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -197,6 +197,22 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       <hr>
     </td>
   </tr>
+  <tr> 
+    <td width="30%" valign="top" align="left"> 
+      <div align="right"> <b>Instruction pointer</b> </div>
+    </td>
+    <td width="70%" valign="top"> 
+      <p>When debugging, the Java editor now indicates the currently executing 
+        with an arrow in the left margin. This arrow is solid for the top stack 
+        frame and hollow for non-top stack frames. </p>
+      <p><img src="images/instruction-pointer.gif" width="401" height="66"></p>
+    </td>
+  </tr>
+  <tr> 
+    <td colspan=2> 
+      <hr>
+    </td>
+  </tr>
   <TR> 
     <TD vAlign=top align=left width="30%"> 
       <P align=right><B><FONT face=Verdana size=2>Configurable task tags</FONT></B> 
