*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -46,64 +46,76 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
 <h2>Java Debugger<a name="debug"></a></h2>
 <h2></h2>
 <table border="0" cellpadding="10" cellspacing="0" width="500">
-  <tr>
-    <td colspan="2" valign="top">
+  <tr> 
+    <td colspan="2" valign="top"> 
       <hr>
     </td>
   </tr>
-  <tr>
-    <td width="30%" valign="top" align="right">
-      <div align="right">
-        <b>Improved conditional breakpoints</b>
-      </div>
+  <tr> 
+    <td width="30%" valign="top" align="right"> 
+      <div align="right"> <b>Improved conditional breakpoints</b> </div>
     </td>
-    <td width="70%" valign="top" align="left">A traditional conditional
-      breakpoint is triggered by a boolean expression evaluating to
-      &quot;true&quot;. It is now possible to declare conditional breakpoints
-      that are triggered whenever the value of an expression changes.
+    <td width="70%" valign="top" align="left">A traditional conditional breakpoint 
+      is triggered by a boolean expression evaluating to &quot;true&quot;. It 
+      is now possible to declare conditional breakpoints that are triggered whenever 
+      the value of an expression changes. 
       <p><img src="images/conditional-breakpoint.gif" width="351" height="171"></p>
     </td>
   </tr>
-  <tr>
-    <td width="30%" valign="top" align="right">
-      <div align="right">
-        <b>New ways to create watch items</b>
-      </div>
-    </td>
-    <td width="70%" valign="top" align="left">The Java debugger can now create
-      watch items from the Java editor by selecting an expression and using the <b>Watch</b>
-      action (available in the context menu, and in the <b>Run</b> menu). As
-      well, a watch item can be created by selecting a variable and using the <b>Watch</b>
-      action.</td>
-  </tr>
-  <tr>
-    <td width="30%" valign="top" align="right">
-      <div align="right">
-        <b>Step filters</b>
-      </div>
-    </td>
-    <td width="70%" valign="top" align="left">Step filters are more convenient
-      to use now that a <b>Step With Filters</b> action has been added to the
-      debug toolbar and menu. As well, actions have been added to the debug
-      context menu to streamline the creation of step filters for the type or
-      package associated with the selected stack frame.</td>
-  </tr>
-  <tr>
-    <td width="30%" valign="top" align="right">
-      <div align="right">
-        <b>Word wrap in Variables view</b>
-      </div>
-    </td>
-    <td width="70%" valign="top" align="left">The details area of the debugger's
-      <b>Variables</b> and <b>Expressions</b> views now supports word wrap,
-      available from the view drop-down menu.
-      <p><img border="0" src="../tips/images/expressions-details-pane.gif" width="338" height="179"></p>
+  <tr> 
+    <td colspan=2> 
+      <hr>
     </td>
   </tr>
-  <tr>
+  <tr> 
+    <td width="30%" valign="top" align="right"> 
+      <div align="right"> <b>New ways to create watch items</b> </div>
+    </td>
+    <td width="70%" valign="top" align="left">The Java debugger can now create 
+      watch items from the Java editor by selecting an expression and using the 
+      <b>Watch</b> action (available in the context menu, and in the <b>Run</b> 
+      menu). As well, a watch item can be created by selecting a variable and 
+      using the <b>Watch</b> action.</td>
+  </tr>
+  <tr> 
+    <td colspan=2> 
+      <hr>
+    </td>
+  </tr>
+  <tr> 
+    <td width="30%" valign="top" align="right"> 
+      <div align="right"> <b>Step filters</b> </div>
+    </td>
+    <td width="70%" valign="top" align="left">Step filters are more convenient 
+      to use now that a <b>Step With Filters</b> action has been added to the 
+      debug toolbar and menu. As well, actions have been added to the debug context 
+      menu to streamline the creation of step filters for the type or package 
+      associated with the selected stack frame.</td>
+  </tr>
+  <tr> 
+    <td colspan=2> 
+      <hr>
+    </td>
+  </tr>
+  <tr> 
+    <td width="30%" valign="top" align="right"> 
+      <div align="right"> <b>Word wrap in Variables view</b> </div>
+    </td>
+    <td width="70%" valign="top" align="left">The details area of the debugger's 
+      <b>Variables</b> and <b>Expressions</b> views now supports word wrap, available 
+      from the view drop-down menu. 
+      <p><img src="images/variables-view-drop-down.gif" width="230" height="152"></p>
+    </td>
+  </tr>
+  <tr> 
+    <td colspan=2> 
+      <hr>
+    </td>
+  </tr>
+  <tr> 
     <td width="30%" valign="top" align="right"><b>Stack trace<br>
       hyperlinks</b></td>
-    <td width="70%" valign="top" align="left">
+    <td width="70%" valign="top" align="left"> 
       <p>Java stack traces in the console now appear with hyperlinks. When you 
         place the mouse over a line in a stack trace, the pointer changes to the 
         hand and the stack trace is underlined. Pressing the mouse button opens 
@@ -112,10 +124,11 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       <p><img border="0" src="../tips/images/stack-trace-hyperlink.gif" width="416" height="133"></p>
     </td>
   </tr>
-  <TR>
-    <TD colSpan=2>
+  <TR> 
+    <TD colSpan=2> 
       <HR>
-    </TD></TR>
+    </TD>
+  </TR>
   <tr> 
     <td width="30%" valign="top" align="left"> 
       <div align="right"> <b>Console buffer size</b> </div>
@@ -172,7 +185,7 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
       <p><img src="images/instruction-pointer.gif" width="401" height="66"></p>
     </td>
   </tr>
-	</table>  
+</table>  
 
 <h2>Java Editor<a name="editor"></a></h2>
 
