*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -53,6 +53,22 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
   </tr>
   <tr> 
     <td width="30%" valign="top" align="right"> 
+      <div align="right"> <b>Threads &amp; Monitors view</b></div>
+    </td>
+    <td width="70%" valign="top" align="left">
+      <p>The debugger's new Threads &amp; Monitors view shows which threads are 
+        holding locks and which are waiting to acquire locks. </p>
+      <p><img src="images/threads-monitors.gif" width="373" height="260"> </p>
+      <p>&nbsp;</p>
+    </td>
+  </tr>
+  <tr> 
+    <td colspan="2" valign="top"> 
+      <hr>
+    </td>
+  </tr>
+  <tr> 
+    <td width="30%" valign="top" align="right"> 
       <div align="right"> <b>Improved conditional breakpoints</b> </div>
     </td>
     <td width="70%" valign="top" align="left">A traditional conditional breakpoint 
