*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
+++ b/bundles/org.eclipse.jdt.doc.user/whatsNew/jdt_whatsnew.html
@@ -55,11 +55,26 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <td width="30%" valign="top" align="right"> 
       <div align="right"> <b>Threads &amp; Monitors view</b></div>
     </td>
-    <td width="70%" valign="top" align="left">
+    <td width="70%" valign="top" align="left"> 
       <p>The debugger's new Threads &amp; Monitors view shows which threads are 
         holding locks and which are waiting to acquire locks. </p>
       <p><img src="images/threads-monitors.gif" width="373" height="260"> </p>
       <p>&nbsp;</p>
+    </td>
+  </tr>
+  <tr> 
+    <td colspan="2" valign="top"> 
+      <hr>
+    </td>
+  </tr>
+  <tr> 
+    <td width="30%" valign="top" align="right"> 
+      <div align="right"> <b>Instance breakpoints &amp; watchpoints</b></div>
+    </td>
+    <td width="70%" valign="top" align="left">You can now set breakpoints &amp; 
+      watch points specific to a particular object instance. In the Variables 
+      view, choose <b>Instance Breakpoints...</b> from the variables context menu. 
+      <p><img src="images/breakpoints-instances.gif" width="344" height="428"></p>
     </td>
   </tr>
   <tr> 
@@ -74,7 +89,8 @@ subsetted. Screen snaps should be GIFs and must be no wider than 466 pixels.]</p
     <td width="70%" valign="top" align="left">A traditional conditional breakpoint 
       is triggered by a boolean expression evaluating to &quot;true&quot;. It 
       is now possible to declare conditional breakpoints that are triggered whenever 
-      the value of an expression changes. 
+      the value of an expression changes. In addition, code assist is now available 
+      when entering the condition. 
       <p><img src="images/conditional-breakpoint.gif" width="351" height="171"></p>
     </td>
   </tr>
